--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,11 +1,202 @@
-<div class="events-container">
-    <h2>Événements à venir</h2>
-    <ul>
-      <li *ngFor="let event of events">
-        <h3>{{ event.name }}</h3>
-        <p>Date: {{ event.date }}</p>
-        <p>{{ event.description }}</p>
-      </li>
-    </ul>
+<div class="grids">
+  <div class="card-one">
+    <div class="card">
+      <div class="card__side card__side--front" id="front-1">
+        <div class="text-box">
+          <h3 class="text-box-top">14h </h3>
+          <h1 class="text-box-middle">yoga</h1>
+          <h3 class="text-box-lower">reservez maintenant</h3>
+        </div>
+      </div>
+      <div class="card__side card__side--back" id="back-1">
+        <div class="text-box">
+          <h3 class="text-box-top">14h</h3>
+          <h1 class="text-box-middle">yogaa</h1>
+          <h3 class="text-box-lower">reservez maintenant</h3>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="card-two">
+    <div class="card">
+      <div class="card__side card__side--front" id="front-2">
+        <div class="text-box">
+          <h3 class="text-box-top">16h</h3>
+          <h1 class="text-box-middle">dance</h1>
+          <h3 class="text-box-lower">reservez maintenant</h3>
+        </div>
+      </div>
+      <div class="card__side card__side--back" id="back-2">
+        <div class="text-box">
+          <h3 class="text-box-top">18h</h3>
+          <h1 class="text-box-middle">dance</h1>
+          <h3 class="text-box-lower">--- More Text ---</h3>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="card-three">
+    <div class="card">
+      <div class="card__side card__side--front" id="front-3">
+        <div class="text-box">
+          <h3 class="text-box-top">8h</h3>
+          <h1 class="text-box-middle">cardio step!</h1>
+          <h3 class="text-box-lower">mixtes</h3>
+        </div>
+      </div>
+      <div class="card__side card__side--back" id="back-3">
+        <div class="text-box">
+          <h3 class="text-box-top">18h</h3>
+          <h1 class="text-box-middle">cardio femmes!</h1>
+          <h3 class="text-box-lower">reservez maintenant</h3>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="card-four">
+    <div class="card">
+      <div class="card__side card__side--front" id="front-4">
+        <div class="text-box">
+          <h3 class="text-box-top">12h</h3>
+          <h1 class="text-box-middle">velo</h1>
+          <h3 class="text-box-lower">men only</h3>
+        </div>
+      </div>
+      <div class="card__side card__side--back" id="back-4">
+        <div class="text-box">
+          <h3 class="text-box-top">15h</h3>
+          <h1 class="text-box-middle">Step</h1>
+          <h3 class="text-box-lower">men onlyy</h3>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="card-five">
+    <div class="card">
+      <div class="card__side card__side--front" id="front-5">
+        <div class="text-box">
+          <h3 class="text-box-top"> 17h</h3>
+          <h1 class="text-box-middle">step !</h1>
+          <h3 class="text-box-lower">ay ay ay</h3>
+        </div>
+      </div>
+      <div class="card__side card__side--back" id="back-5">
+        <div class="text-box">
+          <h3 class="text-box-top">17h</h3>
+          <h1 class="text-box-middle">step !</h1>
+          <h3 class="text-box-lower">ay ay ay</h3>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="card-six">
+    <div class="card">
+      <div class="card__side card__side--front" id="front-6">
+        <div class="text-box">
+          <h3 class="text-box-top">cardio femmes</h3>
+          <h1 class="text-box-middle">16h</h1>
+          <h3 class="text-box-lower">aya reservi</h3>
+        </div>
+      </div>
+      <div class="card__side card__side--back" id="back-6">
+        <div class="text-box">
+          <h3 class="text-box-top">Cards Flipped</h3>
+          <h1 class="text-box-middle">Great!</h1>
+          <h3 class="text-box-lower">--- More Text ---</h3>
+        </div>
+      </div>
+    </div>
   </div>
   
+</div>
+<!--
+      <img
+        src="https://i-sam.unimedias.fr/2024/06/20/cours-yoga.jpeg?auto=format,compress&cs=tinysrgb&w=1200 "/><br>
+      <p>joga</p>
+   
+      <img
+        src="" /><br>
+      <p>dance</p>
+    
+      <img
+        src="" /><br>
+      <p>cardio booxing</p>
+    
+      <img
+        src="" /> <br>
+      <p>cardio velo</p>
+   
+      <img
+        src="" /><br>
+
+      <p>step cours</p>
+    
+      <img
+        src="" /><br>
+      <p>cours cardio femme</p>
+    
+-->
+<script>
+var flipCheck = 0;
+
+function rotateCards() {
+if (flipCheck === 0) {
+document.getElementById("front-2").classList.add("showGreen");
+document.getElementById("back-2").classList.add("showRed");
+
+document.getElementById("front-1").classList.add("showGreen");
+document.getElementById("back-1").classList.add("showRed");
+
+flipCheck = 1;
+
+setTimeout(function () {
+  document.getElementById("front-4").classList.add("showGreen");
+  document.getElementById("back-4").classList.add("showRed");
+
+  document.getElementById("front-3").classList.add("showGreen");
+  document.getElementById("back-3").classList.add("showRed");
+
+  document.getElementById("front-5").classList.add("showGreen");
+  document.getElementById("back-5").classList.add("showRed");
+
+  setTimeout(function () {
+    document.getElementById("front-6").classList.add("showGreen");
+    document.getElementById("back-6").classList.add("showRed");
+
+    document.getElementById("front-7").classList.add("showGreen");
+    document.getElementById("back-7").classList.add("showRed");
+  }, 500);
+}, 500);
+} else {
+document.getElementById("front-2").classList.remove("showGreen");
+document.getElementById("back-2").classList.remove("showRed");
+
+document.getElementById("front-1").classList.remove("showGreen");
+document.getElementById("back-1").classList.remove("showRed");
+
+flipCheck = 0;
+
+setTimeout(function () {
+  document.getElementById("front-3").classList.remove("showGreen");
+  document.getElementById("back-3").classList.remove("showRed");
+
+  document.getElementById("front-4").classList.remove("showGreen");
+  document.getElementById("back-4").classList.remove("showRed");
+
+  document.getElementById("front-5").classList.remove("showGreen");
+  document.getElementById("back-5").classList.remove("showRed");
+
+  setTimeout(function () {
+    document.getElementById("front-7").classList.remove("showGreen");
+    document.getElementById("back-7").classList.remove("showRed");
+
+    document.getElementById("front-6").classList.remove("showGreen");
+    document.getElementById("back-6").classList.remove("showRed");
+  }, 500);
+}, 500);
+}
+}
+
+setInterval(rotateCards, 3000); // Time in milliseconds
+
+</script>
