--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/">Gym Website</a>
+    <a class="navbar-brand" routerLink="/">Acceuil</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -15,13 +15,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/register">Register</a>
+          <a class="nav-link" routerLink="/events">Événements</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/events">Events</a>
+          <a class="nav-link" routerLink="/equipment">Équipments</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/equipment">Equipment</a>
+          <a class="nav-link" routerLink="/register">Contact</a>
         </li>
       </ul>
     </div>
