--- a/src/app/equipment/equipment.component.html
+++ b/src/app/equipment/equipment.component.html
@@ -1,10 +1,35 @@
-<div class="equipment-container">
-    <h2>Équipement disponible</h2>
-    <ul>
-      <li *ngFor="let equipment of equipmentList">
-        <h3>{{ equipment.name }}</h3>
-        <p>{{ equipment.description }}</p>
-      </li>
-    </ul>
-  </div>
+<div class="reservation-container">
+  <h1>Réserver un équipement ou un coach</h1>
   
+  <form class="reservation-form">
+    <div class="equipment-selection">
+      <h2>Choisissez votre équipement</h2>
+      
+      <!-- Card pour chaque équipement -->
+      <div >
+        <img url="https://i-sam.unimedias.fr/2024/06/20/cours-yoga.jpeg?auto=format,compress&cs=tinysrgb&w=1200"  />
+        <div class="equipment-info">
+        </div>
+      </div>
+    </div>
+
+    <!-- Sélection de coach -->
+    <label for="coach">Choisissez un coach :</label>
+    <select id="coach" name="coach">
+      <option value="">Sélectionnez (optionnel)</option>
+      <option value="coach1">Coach 1</option>
+      <option value="coach2">Coach 2</option>
+      <option value="coach3">Coach 3</option>
+    </select>
+
+    <!-- Date et heure -->
+    <label for="date">Date :</label>
+    <input type="date" id="date" name="date" required />
+
+    <label for="time">Heure :</label>
+    <input type="time" id="time" name="time" required />
+
+    <!-- Bouton de réservation -->
+    <button type="submit" >Réserver</button>
+  </form>
+</div>
