--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,54 +1,59 @@
-<div class="register-container">
-  <h2>Register</h2>
-  <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-    <div class="form-group">
-      <label for="name">Name</label>
-      <input
-        type="text"
-        id="name"
-        formControlName="name"
-        class="form-control"
-      />
-      <div *ngIf="submitted && f['name'].errors" class="invalid-feedback">
-        <div *ngIf="f['name'].errors['required']">Name is required</div>
-      </div>
-    </div>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <title>Neogym - Inscription</title>
 
-    <div class="form-group">
-      <label for="email">Email</label>
-      <input
-        type="email"
-        id="email"
-        formControlName="email"
-        class="form-control"
-      />
-      <div *ngIf="submitted && f['email'].errors" class="invalid-feedback">
-        <div *ngIf="f['email'].errors['required']">Email is required</div>
-        <div *ngIf="f['email'].errors['email']">Invalid email format</div>
-      </div>
-    </div>
+  <!-- Bootstrap CDN -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap" rel="stylesheet">
+  <!-- Custom styles -->
+  <link rel="stylesheet" href="./register.component.css" />
+</head>
 
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input
-        type="password"
-        id="password"
-        formControlName="password"
-        class="form-control"
-      />
-      <div *ngIf="submitted && f['password'].errors" class="invalid-feedback">
-        <div *ngIf="f['password'].errors['required']">Password is required</div>
-        <div *ngIf="f['password'].errors['minlength']">
-          Password must be at least 6 characters
+<body class="sub_page">
+  <!-- Section d'inscription -->
+  <section class="contact_section">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-6 px-0">
+          <div class="img-box">
+            <img src="assets/images/contact-img.jpg" alt="Image de Contact">
+          </div>
+        </div>
+        <div class="col-lg-5 col-md-6">
+          <div class="form_container">
+            <div class="heading_container">
+              <h2>Inscription</h2>
+            </div>
+            <form (submit)="onSubmit()">
+              <div>
+                <input type="text" placeholder="Nom" />
+              </div>
+              <div>
+                <input type="email" placeholder="Email" />
+              </div>
+              <div>
+                <input type="text" placeholder="Numéro de téléphone" />
+              </div>
+              <div>
+                <input type="text" class="message-box" placeholder="Message" />
+              </div>
+              <div class="d-flex">
+                <button type="submit">Envoyer</button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </div>
+  </section>
 
-    <div class="form-group">
-      <button [disabled]="loading" class="btn btn-primary">
-        Register
-      </button>
-      <button type="button" class="btn btn-link" (click)="onReset()">Reset</button>
-    </div>
-  </form>
-</div>
+  <!-- Footer -->
+  <footer class="footer_section">
+    <p>&copy; 2020 Tous droits réservés. Conçu par <a href="https://html.design/">Free Html Templates</a></p>
+  </footer>
+</body>
+</html>
